# scout

./: .env.example  .pre-commit-config.yaml  README.md  buildspec-backend.yml  buildspec-frontend.yml  buildspec.yml  pyproject.toml
.github/workflows/: checks.yml  pre-commit.yml
alembic/versions/: 0123b9ebc5a6_add_llm_model_table.py  35abeecc307e_add_audit_log_table.py  37d192d5064c_create_role_enum_and_role_table.py  5793838d774d_change_audit_log_details_to_jsonb.py  586333ad0703_add_role_column_to_user_table.py  58842de7cb9e_add_gate_5_to_criterion_gate_enum.py  60cc60cacf48_add_deleted_flag_to_chat_session.py  96986b650a5c_add_knowledgebase_id_column_to_project_.py  ba7596c6e383_altered_user_to_use_email_and_not_.py  c22a95b7ae29_add_project_id_to_chat_session.py  e83d12402e31_add_chat_session_table.py  eac460d174ce_populate_chat_session_ids.py
backend/: .dockerignore  Dockerfile  main.py
backend/api/: kb_routes.py  llm_routes.py  routes.py  s3.py  s3_routes.py
backend/utils/: associate_user_project_request.py  associate_user_role_request.py  audit.py  custom_query_request.py  dependencies.py  summarise.py
docs/: analyse_projects.md  bedrock_kb_flow.md  evaluation_overview.md  ingest_project_data.md  prompts_and_flow.md  using_aws_bedrock_kb.md
frontend/: Dockerfile  middleware.ts  next.config.js  package-lock.json  package.json
frontend/components/: JsonViewerModal.tsx  ModelSelector.tsx  PieChart.tsx
frontend/pages/: _app.tsx  (+10 more)
libreoffice_service/: Dockerfile
scripts/: analyse_bedrock_kb.py  analyse_project.py
tests/: conftest.py  test_LLMFlag.py
(+65 files in other folders)
